--- a/index.html
+++ b/index.html
@@ -191,11 +191,10 @@
 
                         <!-- SECTION CONTENT -->
                     	<div class="col-md-6">
-
                             <div class="his-her-name">
                         		<p class="SF-font text-center">
-								<span style='font-size:24px;'>신랑 </span>
-								<span style='font-size:35px;'>김영섭</span>         
+								<span style='font-size:24px;'>신랑 &nbsp</span>
+								<span style='font-size:35px;color:#FFF;'>김영섭</span>         
 								<a href="tel:01023868083"><img src="./images/call.png" width=50 alt=""></a>
 								<a href="sms:01023868083"><img src="./images/sms.png" width=50 alt=""></a>
 								</p>
@@ -209,7 +208,9 @@
 						</div>
                         <div class="col-md-6">
                             <div class="his-her-name">
-                        		<h2 class="SF-font text-center">신부 정이슬
+                        		<p class="SF-font text-center">
+								<span style='font-size:24px;'>신부&nbsp </span>
+								<span style='font-size:35px;color:#FFF'>정이슬</span>         
 								<a href="tel:01034472936"><img src="./images/call.png" width=50 alt=""></a>
 								<a href="sms:01034472936"><img src="./images/sms.png" width=50 alt=""></a>
 								</h2>
