--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <div class="his-her-name">
                         		<p class="SF-font text-center">
 								<span style='font-size:24px;'>신랑 &nbsp</span>
-								<span style='font-size:35px;color:#FFF;'>김영섭</span>         
+								<span style='font-size:35px;color:#000;'>김영섭</span>         
 								<a href="tel:01023868083"><img src="./images/call.png" width=50 alt=""></a>
 								<a href="sms:01023868083"><img src="./images/sms.png" width=50 alt=""></a>
 								</p>
@@ -203,14 +203,14 @@
                                 </div>-->
                             </div>
                         </div>
-						<div class="text-center">
+						<div class="heart-wrapper">
                             <img src="images/heart7.png" width="50" alt="">
 						</div>
                         <div class="col-md-6">
                             <div class="his-her-name">
                         		<p class="SF-font text-center">
 								<span style='font-size:24px;'>신부&nbsp </span>
-								<span style='font-size:35px;color:#FFF'>정이슬</span>         
+								<span style='font-size:35px;color:#000'>정이슬</span>         
 								<a href="tel:01034472936"><img src="./images/call.png" width=50 alt=""></a>
 								<a href="sms:01034472936"><img src="./images/sms.png" width=50 alt=""></a>
 								</h2>
