--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                 </div>-->
                             </div>
                         </div>
-						<div class="heart-wrapper">
+						<div class="heart-wrapper text-center">
                             <img src="images/heart7.png" width="50" alt="">
 						</div>
                         <div class="col-md-6">
