--- a/index.html
+++ b/index.html
@@ -195,24 +195,21 @@
                         		<p class="SF-font text-center">
 								<span style='font-size:24px;'>신랑 &nbsp</span>
 								<span style='font-size:35px;color:#000;'>김영섭</span>         
-								<a href="tel:01023868083"><img src="./images/call.png" width=50 alt=""></a>
-								<a href="sms:01023868083"><img src="./images/sms.png" width=50 alt=""></a>
+								<a href="tel:01023868083"><img src="./images/call.png" width=35 alt=""></a>
+								<a href="sms:01023868083"><img src="./images/sms.png" width=35 alt=""></a>
 								</p>
-                                <!--<div class="heart-wrapper">
+                                <div class="heart-wrapper">
                             		<div><img src="images/heart7.png" width="50" alt=""></div>
-                                </div>-->
+                                </div>
                             </div>
                         </div>
-						<div class="heart-wrapper text-center">
-                            <img src="images/heart7.png" width="50" alt="">
-						</div>
                         <div class="col-md-6">
                             <div class="his-her-name">
                         		<p class="SF-font text-center">
-								<span style='font-size:24px;'>신부&nbsp </span>
+								<span style='font-size:24px;'>신부 &nbsp </span>
 								<span style='font-size:35px;color:#000'>정이슬</span>         
-								<a href="tel:01034472936"><img src="./images/call.png" width=50 alt=""></a>
-								<a href="sms:01034472936"><img src="./images/sms.png" width=50 alt=""></a>
+								<a href="tel:01034472936"><img src="./images/call.png" width=35 alt=""></a>
+								<a href="sms:01034472936"><img src="./images/sms.png" width=35 alt=""></a>
 								</h2>
                             </div>
 
@@ -225,20 +222,32 @@
                         <!-- SECTION CONTENT -->
                     	<div class="col-md-6">
                             <div class="his-her-name">
-                        		<h2 class="SF-font text-center">신랑측 혼주          
-                        		<h3 class="SF-font text-center">신랑측 혼주          
-								<a href="tel:01023868083"><img src="./images/call.png" width=50 alt=""></a>
-								<a href="sms:01023868083"><img src="./images/sms.png" width=50 alt=""></a>
-								</h2>
+                        		<p class="SF-font text-center" style="font-size:35px;">신랑측 혼주<br>          
+								<span style='font-size:20px;'>아버지 &nbsp</span>
+								<span style='font-size:30px;color:#000;'>김경민</span>         
+								<a href="tel:01023868083"><img src="./images/call.png" width=30 alt=""></a>
+								<a href="sms:01023868083"><img src="./images/sms.png" width=30 alt=""></a>
+								<br>
+								<span style='font-size:20px;'>어머니 &nbsp</span>
+								<span style='font-size:30px;color:#000;'>송 숙</span>         
+								<a href="tel:01023868083"><img src="./images/call.png" width=30 alt=""></a>
+								<a href="sms:01023868083"><img src="./images/sms.png" width=30 alt=""></a>
+								</p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="his-her-name">
-                        		<h2 class="SF-font text-center">신부측 혼주 
-                        		<h3 class="SF-font text-center">신부측 혼주 
-								<a href="tel:01034472936"><img src="./images/call.png" width=50 alt=""></a>
-								<a href="sms:01034472936"><img src="./images/sms.png" width=50 alt=""></a>
-								</h2>
+                        		<p class="SF-font text-center" style="font-size:35px;">신부측 혼주<br>          
+								<span style='font-size:20px;'>아버지 &nbsp</span>
+								<span style='font-size:30px;color:#000;'>정석훈</span>         
+								<a href="tel:01023868083"><img src="./images/call.png" width=30 alt=""></a>
+								<a href="sms:01023868083"><img src="./images/sms.png" width=30 alt=""></a>
+								<br>
+								<span style='font-size:20px;'>어머니 &nbsp</span>
+								<span style='font-size:30px;color:#000;'>조명희</span>         
+								<a href="tel:01023868083"><img src="./images/call.png" width=30 alt=""></a>
+								<a href="sms:01023868083"><img src="./images/sms.png" width=30 alt=""></a>
+								</p>
                             </div>
                         </div>
                     </div>
