--- a/index.html
+++ b/index.html
@@ -222,31 +222,24 @@
                         <!-- SECTION CONTENT -->
                     	<div class="col-md-6">
                             <div class="his-her-name">
-                        		<p class="SF-font text-center" style="font-size:35px;">신랑측 혼주<br>          
+                        		<p class="SF-font text-center" style="font-size:35px;">신랑측 혼주</p>
 								<span style='font-size:20px;'>아버지 &nbsp</span>
 								<span style='font-size:30px;color:#000;'>김경민</span>         
-								<a href="tel:01023868083"><img src="./images/call.png" width=30 alt=""></a>
-								<a href="sms:01023868083"><img src="./images/sms.png" width=30 alt=""></a>
 								<br>
 								<span style='font-size:20px;'>어머니 &nbsp</span>
 								<span style='font-size:30px;color:#000;'>송 숙</span>         
-								<a href="tel:01023868083"><img src="./images/call.png" width=30 alt=""></a>
-								<a href="sms:01023868083"><img src="./images/sms.png" width=30 alt=""></a>
 								</p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="his-her-name">
-                        		<p class="SF-font text-center" style="font-size:35px;">신부측 혼주<br>          
+                        		<p class="SF-font text-center" style="font-size:35px;">신부측 혼주</p>          
+								<p>
 								<span style='font-size:20px;'>아버지 &nbsp</span>
 								<span style='font-size:30px;color:#000;'>정석훈</span>         
-								<a href="tel:01023868083"><img src="./images/call.png" width=30 alt=""></a>
-								<a href="sms:01023868083"><img src="./images/sms.png" width=30 alt=""></a>
 								<br>
 								<span style='font-size:20px;'>어머니 &nbsp</span>
 								<span style='font-size:30px;color:#000;'>조명희</span>         
-								<a href="tel:01023868083"><img src="./images/call.png" width=30 alt=""></a>
-								<a href="sms:01023868083"><img src="./images/sms.png" width=30 alt=""></a>
 								</p>
                             </div>
                         </div>
