--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
                     	<div class="col-md-6">
                             <div class="his-her-name">
                         		<p class="SF-font text-center" style="font-size:35px;">신랑측 혼주</p>
+								<p class="SF-font text-center">
 								<span style='font-size:20px;'>아버지 &nbsp</span>
 								<span style='font-size:30px;color:#000;'>김경민</span>         
 								<br>
@@ -234,7 +235,7 @@
                         <div class="col-md-6">
                             <div class="his-her-name">
                         		<p class="SF-font text-center" style="font-size:35px;">신부측 혼주</p>          
-								<p>
+								<p class="SF-font text-center">
 								<span style='font-size:20px;'>아버지 &nbsp</span>
 								<span style='font-size:30px;color:#000;'>정석훈</span>         
 								<br>
