--- a/index.html
+++ b/index.html
@@ -532,11 +532,8 @@
                    <!-- SECTION TITLE -->
                   	<div class="col-md-offset-2 col-md-8 text-center">
                        	<div class="section-title animation fadeInUp">
-                       		<h2 class='SF-font'>
-                           		고맙습니다.
-                           	</h2>
                         	<h3 class='SF-font'>
-                           		공유하기    
+                           		카카오로  공유하기    
 								<a id="create-kakao-link-btn" href="javascript:;">
   									<img src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" width=30 />
 								</a>
@@ -573,25 +570,9 @@
                     		<div class="container">
                     			<div class="row">
                         			<div class="col-md-12">
-
-                                        <div class="animation fadeInUp">
-                     						<div id="thank-you">
-                     							<div id="thank">Thank</div>
-                            					<div id="you">You</div>
-                     						</div>
-                                        </div>
-
-                        				<div class="heart-divider animation delay1 fadeInUp">
-                        					<span class="white-line"></span>
-                        					<i class="de-icon-heart pink-heart"></i>
-                        					<i class="de-icon-heart white-heart"></i>
-                        					<span class="white-line"></span>
-                        				</div>
-
-										<div id="footer-couple-name" class="animation delay1 fadeInUp">
-                                			이슬 & 영섭
-                                		</div>
-
+										<h2 class='SF-font'>
+											고맙습니다.
+										</h2>
                      				</div>
                      			</div>
                      		</div>
