--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 						var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
 					</script>
 				</div>
-				<div class='text-center'>
+				<div align='center'>
 
                 	<ul><h3 class="SF-font">엘블레스</h3>
                 	   	<li class="SF-font">서울특별시 서초구 강남대로 213번지<br>(스포타임 지하1층)<br>TEL 02.526.0300  <a href="tel:025260300"><img src="./images/call.png" width=10 alt=""></a></li>
