--- a/index.html
+++ b/index.html
@@ -494,33 +494,32 @@
 						var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
 					</script>
 				</div>
-				<div align='center'>
 
-                	<ul><h3 class="SF-font">엘블레스</h3>
+                	<ul text-align:"center"><h3 class="SF-font">엘블레스</h3>
                 	   	<li class="SF-font">서울특별시 서초구 강남대로 213번지<br>(스포타임 지하1층)<br>TEL 02.526.0300  <a href="tel:025260300"><img src="./images/call.png" width=10 alt=""></a></li>
 					</ul>
                 	<div class="de-icon circle small-size inline" style="background-color:#f6700e">
                 	   	<i class="de-icon-truck"></i>
                 	</div>
                 	<h3 class="inline SF-font">버스</h3>
-					<ul>
+					<ul text-align:"center">
 						<li class="SF-font">양재역, 서초문화예술회관에서 하차</li>
 					</ul>
 					<div class="de-icon circle small-size inline" style="background-color:#0d9a48">
                 	   	<i class="de-icon-rebel"></i>
                 	</div>
                 	<h3 class="inline SF-font">지하철</h3>
-                	<ul>
+                	<ul text-align:"center">
+
                 	   	<li class="SF-font">3호선양재역/신분당선 양재역 - 9번출구</li>
                 	</ul>
 					<div class="de-icon circle small-size inline" style="background-color:#9400d3">
 			    	   	<i class="de-icon-cab"></i>
 			    	</div>
 			    	<h3 class="inline SF-font">승용차</h3>
-			    	<ul>
+                	<ul text-align:"center">
 			    	   	<li class="SF-font">서초IC에서 양재역 방면으로 나오신후<br> 양재지하차도로 진입하지 않고 양재역사거리에서 <br> 성남방향으로 우회전합니다. <br> 우회전후 60m 직진하시면 <br> 우측에 엘블레스가 있습니다.</li>
 					</ul>
-           		</div>
            </div>
       </section>
 
