--- a/index.html
+++ b/index.html
@@ -528,9 +528,9 @@
           <div class="container">
               <!-- ROW-1 -->
                <div class="row">
-                   <!-- SECTION TITLE -->
+                   <!-- SECTION TITLE 
                   	<div class="col-md-offset-2 col-md-8 text-center">
-                       	<!--<div class="section-title animation fadeInUp">-->
+                       	<div class="section-title animation fadeInUp">-->
                         	<h3 class='SF-font'>
                            		카카오로  공유하기    
 								<a id="create-kakao-link-btn" href="javascript:;">
@@ -544,8 +544,8 @@
 								  })
 								</script>
               				</h3>
-                       	<!--</div>-->
-                    </div>
+                       	<!--</div>
+                    </div>-->
                </div> <!-- END of ROW-1 -->
           </div>
     </section>
