--- a/index.html
+++ b/index.html
@@ -525,12 +525,12 @@
 
       <!-- RSVP SECTION -->
       <section id="rsvp-section">
-          <div class="container">
+          <!--<div class="container">-->
               <!-- ROW-1 -->
                <div class="row">
-                   <!-- SECTION TITLE 
+                   <!-- SECTION TITLE--> 
                   	<div class="col-md-offset-2 col-md-8 text-center">
-                       	<div class="section-title animation fadeInUp">-->
+                       	<div class="section-title animation fadeInUp">
                         	<h3 class='SF-font'>
                            		카카오로  공유하기    
 								<a id="create-kakao-link-btn" href="javascript:;">
@@ -544,10 +544,10 @@
 								  })
 								</script>
               				</h3>
-                       	<!--</div>
-                    </div>-->
+                       	</div>
+                    </div>
                </div> <!-- END of ROW-1 -->
-          </div>
+          <!--</div>-->
     </section>
 
 
