--- a/index.html
+++ b/index.html
@@ -531,6 +531,9 @@
                    <!-- SECTION TITLE--> 
                   	<div class="col-md-offset-2 col-md-8 text-center">
                        	<div class="section-title animation fadeInUp">
+  <script language="javascript">
+  function showPopup() { window.open("popup.html", "a", "width=400, height=300, left=100, top=50"); }
+  </script>
                         	<h3 class='SF-font'>
                            		카카오로  공유하기    
 								<a id="create-kakao-link-btn" href="javascript:;">
