--- a/index.html
+++ b/index.html
@@ -534,6 +534,7 @@
   <script language="javascript">
   function showPopup() { window.open("popup.html", "a", "width=400, height=300, left=100, top=50"); }
   </script>
+  <input type="button" value="팝업창 호출" onclick="showPopup();" />
                         	<h3 class='SF-font'>
                            		카카오로  공유하기    
 								<a id="create-kakao-link-btn" href="javascript:;">
