--- a/index.html
+++ b/index.html
@@ -531,10 +531,7 @@
                    <!-- SECTION TITLE--> 
                   	<div class="col-md-offset-2 col-md-8 text-center">
                        	<div class="section-title animation fadeInUp">
-  <script language="javascript">
-  function showPopup() { window.open("popup.html", "a", "width=400, height=300, left=100, top=50"); }
-  </script>
-  <input type="button" value="팝업창 호출" onclick="showPopup();" />
+						<button>모달창</button> <div class="modal"> <div class="modal_content" title="클릭하면 창이 닫힙니다."> 여기에 모달창 내용을 적어줍니다.<br> 이미지여도 좋고 글이어도 좋습니다. </div> </div>
                         	<h3 class='SF-font'>
                            		카카오로  공유하기    
 								<a id="create-kakao-link-btn" href="javascript:;">
