--- a/index.html
+++ b/index.html
@@ -531,35 +531,30 @@
                    <!-- SECTION TITLE--> 
                   	<div class="col-md-offset-2 col-md-8 text-center">
                        	<div class="section-title animation fadeInUp">
-<!doctype html>
-
-<div id="root">
-   
-    <button type="button" id="modal_opne_btn">모달 창 열기</button>
-       
-</div>
-
-<div id="modal">
-   
-    <div class="modal_content">
-        <h2>모달 창</h2>
-       
-        <p>모달 창 입니다.</p>
-       
-        <button type="button" id="modal_close_btn">모달 창 닫기</button>
-       
-    </div>
-   
-    <div class="modal_layer"></div>
-</div>
+<button type='button' id="modal_btn">모달창아 나와랏</button>
+<div class="black_bg"></div>
+<div class="modal_wrap">
+    <div class="modal_close"><a href="#">close</a></div>
+    <div>
+        모달창 내용
+    </div>
+<div>
 <script>
-    $("#modal_opne_btn").click(function(){
-        $("#modal").attr("style", "display:block");
-    });
-   
-     $("#modal_close_btn").click(function(){
-        $("#modal").attr("style", "display:none");
-    });      
+    window.onload = function() {
+ 
+    function onClick() {
+        document.querySelector('.modal_wrap').style.display ='block';
+        document.querySelector('.black_bg').style.display ='block';
+    }   
+    function offClick() {
+        document.querySelector('.modal_wrap').style.display ='none';
+        document.querySelector('.black_bg').style.display ='none';
+    }
+ 
+    document.getElementById('modal_btn').addEventListener('click', onClick);
+    document.querySelector('.modal_close').addEventListener('click', offClick);
+ 
+};
 </script>
                         	<h3 class='SF-font'>
                            		카카오로  공유하기    
