--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 		<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <style>
+      .modal {
         position: absolute;
         top: 0;
         left: 0;
@@ -48,6 +49,7 @@
       }
 
       .modal_body {
+        position: absolute;
         top: 50%;
         left: 50%;
 
