--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
      	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 			<meta property="og:description" content="이슬 영섭 결혼식에 초대합니다."/>
-	<meta property="og:image" content="https://kimysub.github.io/wedding.github.io/images/Couple.jpg"/>
+	<meta property="og:image" content="https://kimysub.github.io/wedding.github.io/images/1518_Original.jpg"/>
       	<title>이슬 &amp; 영섭</title>
         <link rel="icon" href="images/favicon.jpg">
         <!-- Bootstrap -->
@@ -136,7 +136,7 @@
   			<ul class="slides">
     			<li>
                 	<!-- SLIDE IMAGE -->
-                	<div data-stellar-ratio="0.5" class="slide-image" style="background-image:url(./images/wedding_dress.jpeg); background-position:top center; background-size:contain; background-repeat:no-repeat">
+                	<div data-stellar-ratio="0.5" class="slide-image" style="background-image:url(./images/1518_Original.jpg); background-position:top center; background-size:contain; background-repeat:no-repeat">
                     </div>
 
                     <!-- SLIDE OVERLAY -->
@@ -214,6 +214,7 @@
 								<a href="tel:01023868083"><img src="./images/call.png" width=45 alt=""></a>
 								<a href="sms:01023868083"><img src="./images/sms.png" width=45 alt=""></a>
 								</p>
+                            	<div><img src="images/1392_Original.png" width="300" alt=""></div>
                                 <div class="heart-wrapper">
                             		<div><img src="images/heart7.png" width="50" alt=""></div>
                                 </div>
@@ -226,7 +227,8 @@
 								<span style='font-size:42px;color:#000'>정이슬</span>         
 								<a href="tel:01034472936"><img src="./images/call.png" width=45 alt=""></a>
 								<a href="sms:01034472936"><img src="./images/sms.png" width=45 alt=""></a>
-								</h2>
+								</p>
+                            	<div><img src="images/0686_Original.png" width="300" alt=""></div>
                             </div>
 
                         </div>
@@ -301,7 +303,7 @@
                         	<div class="photo-item frame-border animation fadeIn">
 
                              	<!--PHOTO-->
-                               	<img src="./images/Couple.jpg" alt="" class="hover-animation image-zoom-rotate">
+                               	<img src="./images/0517_Original.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -312,7 +314,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '클릭해주셔서 고맙습니다');" href="./images/Couple.jpg" class="magnific-zoom-gallery" title="클릭해주셔서 고맙습니다.">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '클릭해주셔서 고맙습니다');" href="./images/0517_Original.jpg" class="magnific-zoom-gallery" title="클릭해주셔서 고맙습니다.">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -331,7 +333,7 @@
                         	<div class="photo-item frame-border animation fadeIn">
 
                              	<!--PHOTO-->
-                               	<img src="./images/Couple2.jpg" alt="" class="hover-animation image-zoom-rotate">
+                               	<img src="./images/1254_Original.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -342,7 +344,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '사진2');" href="./images/Couple2.jpg" class="magnific-zoom-gallery" title="사진2">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '사진2');" href="./images/1254_Original.jpg" class="magnific-zoom-gallery" title="사진2">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -361,7 +363,7 @@
                         	<div class="photo-item frame-border animation fadeIn">
 
                              	<!--PHOTO-->
-                               	<img src="./images/Couple3.jpg" alt="" class="hover-animation image-zoom-rotate">
+                               	<img src="./images/1457_Original.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -372,7 +374,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', 'i love you');" href="./images/Couple3.jpg" class="magnific-zoom-gallery" title="I Love You">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', 'i love you');" href="./images/1457_Original.jpg" class="magnific-zoom-gallery" title="I Love You">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -391,7 +393,7 @@
                         	<div class="photo-item frame-border animation fadeIn">
 
                              	<!--PHOTO-->
-                               	<img src="./images/Couple.jpg" alt="" class="hover-animation image-zoom-rotate">
+                               	<img src="./images/1489_Original.jpg" alt="" class="hover-animation image-zoom-rotate">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -402,7 +404,7 @@
                                     <div class="alignment">
                                     	<div class="v-align center-middle">
 
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '재탕사진');" href="./images/Couple.jpg" class="magnific-zoom-gallery" title="재탕사진">
+                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '재탕사진');" href="./images/1489_Original.jpg" class="magnific-zoom-gallery" title="재탕사진">
         										<div class="de-icon circle light medium-size inline">
             										<i class="de-icon-zoom-in"></i>
             									</div>
@@ -414,36 +416,6 @@
 
                             </div><!--END of PHOTO-ITEM-->
                         </div><!--END of GALLERY-ITEM-4-->
-
-                        <!--GALLERY-ITEM-5-->
-                        <div class="col-md-4">
-                            <!--PHOTO-ITEM-->
-                        	<div class="photo-item frame-border animation fadeIn">
-
-                             	<!--PHOTO-->
-                               	<img src="./images/Couple2.jpg" alt="" class="hover-animation image-zoom-rotate">
-
-                               	<!--PHOTO OVERLAY-->
-                           		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
-                            	</div><!--END of PHOTO OVERLAY-->
-
-                                <!--ICON LINK-->
-                                <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
-                                    <div class="alignment">
-                                    	<div class="v-align center-middle">
-
-                                     		<a onclick="ga('send', 'event', '갤러리', '클릭', '재탕사진2');" href="./images/Couple2.jpg" class="magnific-zoom-gallery" title="재탕사진2">
-        										<div class="de-icon circle light medium-size inline">
-            										<i class="de-icon-zoom-in"></i>
-            									</div>
-        									</a>
-
-                                      	</div>
-                                    </div>
-                                </div><!--END of ICON LINK-->
-
-                            </div><!--END of PHOTO-ITEM-->
-                        </div><!--END of GALLERY-ITEM-5-->
 
              <!-- WHERE WHEN SECTION -->
             <section id="where-when">
