--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				<div class="slide-title-inner-wrapper">
                     <!-- TITLE 2 -->
 					<div class="slide-title text-center">
-                    	<div class="container">
+                    	<div class="container center-bottom">
                         	<div class="row">
                         		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
                                     </div>
