--- a/index.html
+++ b/index.html
@@ -110,16 +110,18 @@
 				<div class="slide-title-inner-wrapper">
                     <!-- TITLE 2 -->
 					<div class="slide-title text-center">
-                    	<div class="container center-bottom">
+                    	<div class="container">
                         	<div class="row">
                         		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
                                     </div>
+                        	<div class="center-bottom">
                             		<h1><img src="images/heart7.png" width="50" alt=""></h1>
                                     	<h1 class="SF-font">이슬 영섭 결혼합니다.</h1>
                                     <div id="banner-date">
                                     	- 2021.09.04 오후 5시 -</br> 
 										엘블레스 웨딩홀
                                     </div>
+                             </div>
 
 								</div>
 							</div>
