--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
 					<div class="slide-title text-center">
                     	<div class="container">
                         	<div class="row">
-                        		<!--<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">-->
-                        		<div class="center-bottom animation delay1 fadeInUp">
+                        		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
                             		<h1><img src="images/heart7.png" width="50" alt=""></h1>
                                     	<h1 class="SF-font">이슬 영섭 결혼합니다.</h1>
                                     <div id="banner-date">
