--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             	<!-- MAIN SLIDER TITLE INNER WRAPPER -->
 				<div class="slide-title-inner-wrapper">
                     <!-- TITLE 2 -->
-					<div class="slide-title text-center">
+					<div class="slide-title text-center align-bottom">
                     	<div class="container">
                         	<div class="row">
                         		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
