--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             	<!-- MAIN SLIDER TITLE INNER WRAPPER -->
 				<div class="slide-title-inner-wrapper">
                     <!-- TITLE 2 -->
-					<div class="slide-title text-center align-bottom">
+					<div class="slide-title text-center">
                     	<div class="container">
                         	<div class="row">
                         		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
@@ -132,9 +132,10 @@
 
   			<ul class="slides">
     			<li>
-                	<!-- SLIDE IMAGE -->
-                	<div data-stellar-ratio="0.5" class="slide-image" style="background-image:url(./images/1518_Original.jpg); background-position:top center; background-size:contain; background-repeat:no-repeat">
-                    </div>
+                	<!-- SLIDE IMAGE background-size:contain; background-repeat:no-repeat"> -->
+                	<div data-stellar-ratio="0.5" class="slide-image" style="background-image:url(./images/1518_Original.jpg); background-position:top center;> 
+					
+	                    </div>
 
                     <!-- SLIDE OVERLAY -->
                     <div class="slide-overlay" style="opacity:0"> </div>
