--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     	<div class="container">
                         	<div class="row">
                         		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
-                            		<h1><br><br><img src="images/heart7.png" width="50" alt=""></h1>
+                            		<h1><br><br><br><img src="images/heart7.png" width="50" alt=""></h1>
                                     	<h1 class="SF-font">이슬 영섭 결혼합니다.</h1>
                                     <div id="banner-date">
                                     	- 2021.09.04 오후 5시 -</br> 
