--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
 
                         <!-- SECTION CONTENT -->
                     	<div class="col-md-6">
+                        	<!--PHOTO-ITEM-->
+
                             <div class="his-her-name">
                         		<p class="SF-font text-center">
 								<span style='font-size:32px;'>신랑 &nbsp</span>
@@ -212,11 +214,19 @@
 								<a href="tel:01023868083"><img src="./images/call.png" width=45 alt=""></a>
 								<a href="sms:01023868083"><img src="./images/sms.png" width=45 alt=""></a>
 								</p>
-                            	<div><img src="images/1392_Original.png" width="300" alt=""></div>
                                 <div class="heart-wrapper">
                             		<div><img src="images/heart7.png" width="50" alt=""></div>
                                 </div>
                             </div>
+                        	<div class="photo-item frame-border animation fadeInLeft">
+
+                             	<!--PHOTO-->
+                               	<img src="./images/1392_Original.jpg" alt="" class="hover-animation image-zoom-in">
+
+                               	<!--PHOTO OVERLAY-->
+                           		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
+                            	</div><!--END of PHOTO OVERLAY-->
+                            </div><!--END of PHOTO-ITEM-->
                         </div>
                         <div class="col-md-6">
                             <div class="his-her-name">
@@ -226,8 +236,16 @@
 								<a href="tel:01034472936"><img src="./images/call.png" width=45 alt=""></a>
 								<a href="sms:01034472936"><img src="./images/sms.png" width=45 alt=""></a>
 								</p>
-                            	<div><img src="images/0686_Original.png" width="300" alt=""></div>
                             </div>
+                        	<div class="photo-item frame-border animation fadeInLeft">
+
+                             	<!--PHOTO-->
+                               	<img src="./images/0686_Original.jpg" alt="" class="hover-animation image-zoom-in">
+
+                               	<!--PHOTO OVERLAY-->
+                           		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
+                            	</div><!--END of PHOTO OVERLAY-->
+                            </div><!--END of PHOTO-ITEM-->
 
                         </div>
                     </div>
