--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 	<div class="row">
 
                         <!-- SECTION CONTENT -->
-                    	<div class="col-md-6">
+                    	<div class="col-md-6 marginbottom">
                         	<!--PHOTO-ITEM-->
 
                             <div class="his-her-name">
