--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                         		<p class="SF-font text-center">
 								<span style='font-size:32px;'>신랑 &nbsp</span>
 								<span style='font-size:42px;color:#000;'>김영섭</span>         
-								<a href="tel:01023868083"><img src="./images/call.png" width=45 alt=""></a>
-								<a href="sms:01023868083"><img src="./images/sms.png" width=45 alt=""></a>
+								<a href="tel:01034472936"><img src="./images/phone_image.png" width=45 alt=""></a>
+								<a href="sms:01034472936"><img src="./images/text-message.png" width=45 alt=""></a>
 								</p>
                                 <div class="heart-wrapper">
                             		<div><img src="images/heart7.png" width="50" alt=""></div>
@@ -228,13 +228,13 @@
                             	</div><!--END of PHOTO OVERLAY-->
                             </div><!--END of PHOTO-ITEM-->
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 marginbottom">
                             <div class="his-her-name">
                         		<p class="SF-font text-center">
 								<span style='font-size:32px;'>신부 &nbsp </span>
 								<span style='font-size:42px;color:#000'>정이슬</span>         
-								<a href="tel:01034472936"><img src="./images/call.png" width=45 alt=""></a>
-								<a href="sms:01034472936"><img src="./images/sms.png" width=45 alt=""></a>
+								<a href="tel:01034472936"><img src="./images/phone_image.png" width=45 alt=""></a>
+								<a href="sms:01034472936"><img src="./images/text-message.png" width=45 alt=""></a>
 								</p>
                             </div>
                         	<div class="photo-item frame-border animation fadeInLeft">
@@ -283,7 +283,7 @@
 
             <!-- PHOTO DIVIDER -->
             <section id="photo-divider-1">
-            	<div class="image-divider fixed-height" style="background-image:url(./images/Couple3.jpg); height:500px" data-stellar-background-ratio="0.3">
+            	<div class="image-divider fixed-height" style="background-image:url(./images/1456_Original.jpg); height:400px" data-stellar-background-ratio="0.3">
                 </div>
             </section>
 
@@ -472,7 +472,7 @@
 
 				<div align='center'>
                 	<ul><h3 class="SF-font">엘블레스</h3>
-                	   	<li class="SF-font">서울특별시 서초구 강남대로 213번지<br>(스포타임 지하1층)<br>TEL 02.526.0300  <a href="tel:025260300"><img src="./images/call.png" width=10 alt=""></a></li>
+                	   	<li class="SF-font">서울특별시 서초구 강남대로 213번지<br>(스포타임 지하1층)<br>TEL 02.526.0300  <a href="tel:025260300"><img src="./images/phone_image.png" width=15 alt=""></a></li>
 					</ul>
 					<ul>
                 	<div class="de-icon circle small-size inline" style="background-color:#f6700e">
@@ -518,7 +518,7 @@
                         	<h3 class='SF-font'>
                            		카카오로  공유하기    
 								<a id="create-kakao-link-btn" href="javascript:;">
-  									<img src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" width=30 />
+									<img src="./images/kakaoblack.png" width=15 alt="">
 								</a>
 								<script type="text/javascript">
 								    Kakao.init('4114917bba98b382c335ebc0f0f8eba2');
@@ -542,7 +542,7 @@
 
         <!-- FOOTER SECTION -->
             <footer>
-            	<div class="image-divider fixed-height" style="background-image:url(./images/YS_Jung.jpg);" data-stellar-background-ratio="0.5" >
+            	<div class="image-divider fixed-height" style="background-image:url(./images/1456_Original.jpg);" data-stellar-background-ratio="0.5" >
 
                 	<div class="divider-overlay"></div>
 
