--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             <div class="his-her-name">
                         		<p class="SF-font text-center">
 								<span style='font-size:32px;'>신랑 &nbsp</span>
-								<span style='font-size:42px;color:#000;'>김영섭</span>         
+								<span style='font-size:42px;color:#000;'>김영섭&nbsp&nbsp</span>         
 								<a href="tel:01034472936"><img src="./images/phone_image.png" width=45 alt=""></a>
 								<a href="sms:01034472936"><img src="./images/text-message.png" width=45 alt=""></a>
 								</p>
@@ -232,7 +232,7 @@
                             <div class="his-her-name">
                         		<p class="SF-font text-center">
 								<span style='font-size:32px;'>신부 &nbsp </span>
-								<span style='font-size:42px;color:#000'>정이슬</span>         
+								<span style='font-size:42px;color:#000'>정이슬&nbsp&nbsp</span>         
 								<a href="tel:01034472936"><img src="./images/phone_image.png" width=45 alt=""></a>
 								<a href="sms:01034472936"><img src="./images/text-message.png" width=45 alt=""></a>
 								</p>
