--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
 
                             <div class="his-her-name">
                         		<p class="SF-font text-center">
-								<span style='font-size:32px;'>신랑 &nbsp</span>
-								<span style='font-size:42px;color:#000;'>김영섭&nbsp&nbsp</span>         
-								<a href="tel:01034472936"><img src="./images/phone_image.png" width=45 alt=""></a>
-								<a href="sms:01034472936"><img src="./images/text-message.png" width=45 alt=""></a>
+								<span style='font-size:28px;'>신랑 &nbsp</span>
+								<span style='font-size:36px;color:#000;'>김영섭&nbsp&nbsp</span>         
+								<a href="tel:01034472936"><img src="./images/phone_image.png" width=42 alt=""></a>
+								<a href="sms:01034472936"><img src="./images/text-message.png" width=42 alt=""></a>
 								</p>
                                 <div class="heart-wrapper">
                             		<div><img src="images/heart7.png" width="50" alt=""></div>
@@ -231,10 +231,10 @@
                         <div class="col-md-6 marginbottom">
                             <div class="his-her-name">
                         		<p class="SF-font text-center">
-								<span style='font-size:32px;'>신부 &nbsp </span>
-								<span style='font-size:42px;color:#000'>정이슬&nbsp&nbsp</span>         
-								<a href="tel:01034472936"><img src="./images/phone_image.png" width=45 alt=""></a>
-								<a href="sms:01034472936"><img src="./images/text-message.png" width=45 alt=""></a>
+								<span style='font-size:28px;'>신부 &nbsp </span>
+								<span style='font-size:36px;color:#000'>정이슬&nbsp&nbsp</span>         
+								<a href="tel:01034472936"><img src="./images/phone_image.png" width=42 alt=""></a>
+								<a href="sms:01034472936"><img src="./images/text-message.png" width=42 alt=""></a>
 								</p>
                             </div>
                         	<div class="photo-item frame-border animation fadeInLeft">
@@ -318,7 +318,7 @@
                         	<div class="photo-item frame-border animation fadeIn">
 
                              	<!--PHOTO-->
-                               	<img src="./images/0517_Original.jpg" alt="" class="hover-animation image-zoom-rotate">
+                               	<img src="./images/0517_Original.jpg" alt="" class="hover-animation image-zoom-in">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -348,7 +348,7 @@
                         	<div class="photo-item frame-border animation fadeIn">
 
                              	<!--PHOTO-->
-                               	<img src="./images/1254_Original.jpg" alt="" class="hover-animation image-zoom-rotate">
+                               	<img src="./images/1254_Original.jpg" alt="" class="hover-animation image-zoom-in">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -378,7 +378,7 @@
                         	<div class="photo-item frame-border animation fadeIn">
 
                              	<!--PHOTO-->
-                               	<img src="./images/1457_Original.jpg" alt="" class="hover-animation image-zoom-rotate">
+                               	<img src="./images/1457_Original.jpg" alt="" class="hover-animation image-zoom-in">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -445,9 +445,9 @@
     				</div>
   				</div>
 <!-- 이미지 지도를 표시할 div 입니다 -->
-				<div align='center'><h2 class="SF-font">오시는 길</h2></div>
+				<div><h2 class="SF-font">오시는 길</h2></div>
 				
-				<div align='center'>
+				<div>
 					<div id="staticMap" style="width:356px;height:350px;"></div>
 					<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4114917bba98b382c335ebc0f0f8eba2"></script>
 					<script>
@@ -470,7 +470,7 @@
 					</script>
 				</div>
 
-				<div align='center'>
+				<div>
                 	<ul><h3 class="SF-font">엘블레스</h3>
                 	   	<li class="SF-font">서울특별시 서초구 강남대로 213번지<br>(스포타임 지하1층)<br>TEL 02.526.0300  <a href="tel:025260300"><img src="./images/phone_image.png" width=25 alt=""></a></li>
 					</ul>
@@ -494,7 +494,7 @@
 			    	   	<i class="de-icon-cab"></i>
 			    	</div>
 			    	<h3 class="inline SF-font">승용차</h3>
-			    	   	<li class="SF-font">서초IC에서 양재역 방면으로 나오신후<br> 양재지하차도로 진입하지 않고 양재역사거리에서 <br> 성남방향으로 우회전합니다. <br> 우회전후 60m 직진하시면 <br> 우측에 엘블레스가 있습니다.</li>
+			    	   	<li class="SF-font">서초IC에서 양재역 방면으로 나오신후<br> 양재지하차도로 진입하지 않고<br> 양재역사거리에서 성남방향으로 우회전합니다. <br> 우회전후 60m 직진하시면 <br> 우측에 엘블레스가 있습니다.</li>
 					</ul>
 				</div>
            </div>
