--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 <!-- 이미지 지도를 표시할 div 입니다 -->
 				<div><h2 class="SF-font">오시는 길</h2></div>
 				
-				<div>
+				<div id="map-canvas">
 					<div id="staticMap" style="width:356px;height:350px;"></div>
 					<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4114917bba98b382c335ebc0f0f8eba2"></script>
 					<script>
@@ -468,7 +468,6 @@
 						// 이미지 지도를 생성합니다
 						var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
 					</script>
-				</div>
 
 				<div>
                 	<ul><h3 class="SF-font">엘블레스</h3>
@@ -496,6 +495,7 @@
 			    	<h3 class="inline SF-font">승용차</h3>
 			    	   	<li class="SF-font">서초IC에서 양재역 방면으로 나오신후<br> 양재지하차도로 진입하지 않고<br> 양재역사거리에서 성남방향으로 우회전합니다. <br> 우회전후 60m 직진하시면 <br> 우측에 엘블레스가 있습니다.</li>
 					</ul>
+				</div>
 				</div>
            </div>
       </section>
