--- a/index.html
+++ b/index.html
@@ -445,11 +445,10 @@
     				</div>
   				</div>
 <!-- 이미지 지도를 표시할 div 입니다 -->
-				<div class='route'>
-				<div class='route_box'>
+                <div class="col-md-12 text-center">
                 <h2 class="SF-font">오시는 길</h2>
 				
-				<div>
+                <div class="col-md-12 text-center">
 					<div id="staticMap" style="width:356px;height:350px;"></div>
 					<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4114917bba98b382c335ebc0f0f8eba2"></script>
 					<script>
@@ -472,7 +471,7 @@
 					</script>
                 </div>
 
-				<div>
+                <div class="col-md-12 text-center">
                 	<ul><h3 class="SF-font">엘블레스</h3>
                 	   	<li class="SF-font">서울특별시 서초구 강남대로 213번지<br>(스포타임 지하1층)<br>TEL 02.526.0300  <a href="tel:025260300"><img src="./images/phone_image.png" width=25 alt=""></a></li>
 					</ul>
@@ -498,8 +497,6 @@
 			    	<h3 class="inline SF-font">승용차</h3>
 			    	   	<li class="SF-font">서초IC에서 양재역 방면으로 나오신후<br> 양재지하차도로 진입하지 않고<br> 양재역사거리에서 성남방향으로 우회전합니다. <br> 우회전후 60m 직진하시면 <br> 우측에 엘블레스가 있습니다.</li>
 					</ul>
-				</div>
-				</div>
 				</div>
            </div>
       </section>
