--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                 <div class="col-md-12 text-center">
                 <h2 class="SF-font">오시는 길</h2>
 				
-                <div class="col-md-12 text-center">
+                <div align='center'>
 					<div id="staticMap" style="width:356px;height:350px;"></div>
 					<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4114917bba98b382c335ebc0f0f8eba2"></script>
 					<script>
@@ -471,7 +471,7 @@
 					</script>
                 </div>
 
-                <div class="col-md-12 text-center">
+                <div> 
                 	<ul><h3 class="SF-font">엘블레스</h3>
                 	   	<li class="SF-font">서울특별시 서초구 강남대로 213번지<br>(스포타임 지하1층)<br>TEL 02.526.0300  <a href="tel:025260300"><img src="./images/phone_image.png" width=25 alt=""></a></li>
 					</ul>
